--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/BattleGround.BattleGround
 EditorStartupMap=/Game/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/Blueprints/SinglePlayerGameMode.SinglePlayerGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
