--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BattleGround.BattleGround
-EditorStartupMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
 GlobalDefaultGameMode=/Game/Blueprints/SinglePlayerGameMode.SinglePlayerGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
